projecting on pcs

--- a/run_test.ipynb
+++ b/run_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,17 +20,23 @@
     "    concat_AFs, \n",
     "    divide_into_chunks, \n",
     "    make_ids,\n",
-    "    is_snp\n",
+    "    make_AFs\n",
     ")\n",
     "\n",
-    "from chasm.gwas import make_AFs, ols_regression\n",
+    "from chasm.data_preprocessing import (\n",
+    "    is_snp,\n",
+    "    make_df,\n",
+    "    calculate_AFs,\n",
+    "    merge_AFs_ensembl_build,\n",
+    "    divide_into_chunks\n",
+    ")\n",
     "\n",
-    "\n"
+    "from chasm.gwas import ols_regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -50,166 +56,26 @@
     "\"\"\"\n",
     "# GTM data\n",
     "path_data_raw = f\"{CONFIG['PATH_data']}/00_raw/recoded_1000G.raw\"\n",
-    "path_data_ids = f\"{CONFIG['PATH_data']}/00_raw/recoded_1000G.raw.noadmixed.ids\"\n",
-    "path_data_lbls3 = f\"{CONFIG['PATH_data']}/00_raw/recoded_1000G.raw.noadmixed.lbls3\"\n",
-    "\n",
-    "geno = pd.read_csv(path_data_raw, sep=\" \")\n",
-    "non_snp_cols = [col for col in geno.columns if not is_snp(col)]\n",
-    "path_usefull = f\"{CONFIG['PATH_data']}/usefull/\"\n",
-    "os.makedirs(path_usefull, exist_ok=True)\n",
-    "geno[non_snp_cols].to_pickle(f\"{path_usefull}/ids.pkl\")\n",
-    "geno = geno.drop(columns=non_snp_cols)\n",
     "path_raw = f\"{CONFIG['PATH_data']}/01_raw/\"\n",
-    "os.makedirs(path_raw, exist_ok=True)\n",
-    "geno.to_pickle(f\"{path_raw}/geno.pkl\")\n",
-    "allele_frequencies = geno.sum(axis=0) / (2 * geno.shape[0])\n",
+    "path_usefull = f\"{CONFIG['PATH_data']}/02_usefull/\"\n",
     "\n",
-    "allele_frequencies_df = pd.DataFrame(allele_frequencies, columns=[\"AF\"])\n",
-    "# Assuming allele_frequencies is a Pandas Series\n",
-    "allele_frequencies_df = allele_frequencies.reset_index()\n",
-    "allele_frequencies_df.columns = [\"snp_rs\", \"AF\"]  # Rename columns\n",
-    "# Create a new column without the allele suffix\n",
-    "allele_frequencies_df['RSID'] = allele_frequencies_df['snp_rs'].str.replace(r'_[ACTG]$', '', regex=True)\n",
+    "geno = make_df(path_data_raw, path_usefull, path_output)\n",
     "\n",
-    "merged_dfs = []\n",
+    "afs = calculate_AFs(geno)\n",
+    "\n",
     "path_ensembl = f\"/mnt/e/1000G_data/usefull/ensembl_build\"\n",
-    "for chrom in list(range(22)):\n",
-    "    chrom += 1\n",
-    "    path_ensembl_chrom = f\"{path_ensembl}/chrom_{chrom}\"\n",
-    "    for build in [f for f in os.listdir(path_ensembl_chrom) if f.startswith('build')]:\n",
-    "        build = pd.read_pickle(f\"{path_ensembl_chrom}/{build}\")\n",
-    "        build['CHROM'] = chrom\n",
-    "        merged_dfs.append(pd.merge(allele_frequencies_df, build, left_on='RSID', right_on='RSID', how='inner'))\n",
-    "        \n",
-    "df = pd.concat(merged_dfs, axis=0)\n",
-    "# Sorting by CHROM and then POS\n",
-    "df_sorted = df.sort_values(by=[\"CHROM\", \"POS\"]).reset_index(drop=True)\n",
-    "df_sorted.to_pickle(f\"{path_usefull}/allele_frequencies.pkl\")\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nsize_chunck = 20_000\\nmin_maf = 0.01\\n\\npath_raw = f\"{CONFIG[\\'PATH_data\\']}/01_raw/\"\\ngeno = pd.read_pickle(f\"{path_raw}/geno.pkl\")\\ngeno.fillna(0, inplace=True)\\ngeno = (geno - 1)*-1\\n\\npath_afs = f\"{CONFIG[\\'PATH_data\\']}/usefull/allele_frequencies.pkl\"\\npath_output = f\"{CONFIG[\\'PATH_data\\']}/03_macro_similar_AF/\"\\nos.makedirs(path_output, exist_ok=True)\\nafs = pd.read_pickle(path_afs)\\n\\nfor chrom in afs[\\'CHROM\\'].unique():\\n    path_output_chrom = f\"{path_output}/chrom_{chrom}/\"\\n    os.makedirs(path_output_chrom, exist_ok=True)\\n    \\n    afs_chrom = afs[afs[\\'CHROM\\'] == chrom]\\n    afs_chrom = afs_chrom[afs_chrom[\\'AF\\'] > min_maf]\\n\\n    afs_chrom = afs_chrom.sort_values(by=[\"AF\"], ascending=False).reset_index(drop=True)\\n    nr_snps_total = len(afs_chrom)\\n    num_subframes = nr_snps_total//size_chunck\\n    remaining_rows = nr_snps_total%size_chunck\\n    \\n    try:\\n        to_divide_in = remaining_rows//num_subframes\\n        rest = nr_snps_total- ((size_chunck + to_divide_in)*num_subframes)\\n        snps_per_segments = np.ones(num_subframes) * (size_chunck+ to_divide_in)\\n        to_add = np.concatenate((np.ones(rest), np.zeros(num_subframes - rest)),axis = 0)\\n        snps_per_segments = snps_per_segments + to_add\\n    except Exception as e:\\n        snps_per_segments = [nr_snps_total]\\n        \\n    # Make Chunks per chromosomes\\n    start = 0\\n    end = 0\\n    i = 0\\n    for nr_snps in snps_per_segments:\\n        end = int(end + nr_snps)\\n        AF_chunk = afs_chrom[start:end].copy()\\n        start = int(start + nr_snps)\\n        feature_size = AF_chunk.shape[0]\\n        i+=1\\n        minaf = np.round(AF_chunk[\\'AF\\'].min(),2)\\n        maxaf = np.round(AF_chunk[\\'AF\\'].max(),2)\\n        geno[AF_chunk[\\'snp_rs\\']].to_pickle(f\"{path_output_chrom}/chunk_{i}_size_{len(AF_chunk)}_mafs_{minaf}_{maxaf}.pkl\")\\n'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "merge_AFs_ensembl_build(path_ensembl, path_usefull, afs)\n",
+    "\"\"\"\n",
     "# Divide the AFs into chunks\n",
     "\"\"\"\n",
     "size_chunck = 20_000\n",
     "min_maf = 0.01\n",
     "\n",
     "path_raw = f\"{CONFIG['PATH_data']}/01_raw/\"\n",
-    "geno = pd.read_pickle(f\"{path_raw}/geno.pkl\")\n",
-    "geno.fillna(0, inplace=True)\n",
-    "geno = (geno - 1)*-1\n",
-    "\n",
     "path_afs = f\"{CONFIG['PATH_data']}/usefull/allele_frequencies.pkl\"\n",
     "path_output = f\"{CONFIG['PATH_data']}/03_macro_similar_AF/\"\n",
-    "os.makedirs(path_output, exist_ok=True)\n",
-    "afs = pd.read_pickle(path_afs)\n",
     "\n",
-    "for chrom in afs['CHROM'].unique():\n",
-    "    path_output_chrom = f\"{path_output}/chrom_{chrom}/\"\n",
-    "    os.makedirs(path_output_chrom, exist_ok=True)\n",
-    "    \n",
-    "    afs_chrom = afs[afs['CHROM'] == chrom]\n",
-    "    afs_chrom = afs_chrom[afs_chrom['AF'] > min_maf]\n",
-    "\n",
-    "    afs_chrom = afs_chrom.sort_values(by=[\"AF\"], ascending=False).reset_index(drop=True)\n",
-    "    nr_snps_total = len(afs_chrom)\n",
-    "    num_subframes = nr_snps_total//size_chunck\n",
-    "    remaining_rows = nr_snps_total%size_chunck\n",
-    "    \n",
-    "    try:\n",
-    "        to_divide_in = remaining_rows//num_subframes\n",
-    "        rest = nr_snps_total- ((size_chunck + to_divide_in)*num_subframes)\n",
-    "        snps_per_segments = np.ones(num_subframes) * (size_chunck+ to_divide_in)\n",
-    "        to_add = np.concatenate((np.ones(rest), np.zeros(num_subframes - rest)),axis = 0)\n",
-    "        snps_per_segments = snps_per_segments + to_add\n",
-    "    except Exception as e:\n",
-    "        snps_per_segments = [nr_snps_total]\n",
-    "        \n",
-    "    # Make Chunks per chromosomes\n",
-    "    start = 0\n",
-    "    end = 0\n",
-    "    i = 0\n",
-    "    for nr_snps in snps_per_segments:\n",
-    "        end = int(end + nr_snps)\n",
-    "        AF_chunk = afs_chrom[start:end].copy()\n",
-    "        start = int(start + nr_snps)\n",
-    "        feature_size = AF_chunk.shape[0]\n",
-    "        i+=1\n",
-    "        minaf = np.round(AF_chunk['AF'].min(),2)\n",
-    "        maxaf = np.round(AF_chunk['AF'].max(),2)\n",
-    "        geno[AF_chunk['snp_rs']].to_pickle(f\"{path_output_chrom}/chunk_{i}_size_{len(AF_chunk)}_mafs_{minaf}_{maxaf}.pkl\")\n",
+    "divide_into_chunks(path_raw, path_afs, path_output, size_chunck, min_maf)\n",
     "\"\"\""
    ]
   },
