--- a/run_test.ipynb
+++ b/run_test.ipynb
@@ -9,12 +9,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-21 14:30:37.701106: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-02-21 14:30:37.785212: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-02-21 14:30:38.488754: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-02-21 14:30:38.492318: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-02-25 10:11:04.450931: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-02-25 10:11:04.588472: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-02-25 10:11:05.695284: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-02-25 10:11:05.700093: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-02-21 14:30:40.341018: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2025-02-25 10:11:07.716759: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -258,47 +258,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create one dimensional representation of the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "path_data = f\"{CONFIG['PATH_data']}/\"\n",
-    "iterations = [f for f in os.listdir(path_data) if f.startswith('iteration')]\n",
-    "for iteration in iterations[0:1]:\n",
+    "iterations = [f for f in os.listdir(path_data) if f.startswith('iteration_0')]\n",
+    "for iteration in iterations:\n",
     "    path_iteration = f\"{path_data}/{iteration}/\"\n",
     "    for pop in [f for f in os.listdir(path_iteration) if f.startswith('pop')]:\n",
     "        pop = pop.split('pop_')[1]\n",
     "        path_pop = f\"{path_iteration}/pop_{pop}/\"\n",
     "        dims = [f for f in os.listdir(path_pop) if f.startswith('PCs')]\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['PCs_dim_1.pkl', 'PCs_dim_2.pkl', 'PCs_dim_3.pkl']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dims"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "nr_PCs = 3\n",
     "PCs_labels = []\n",
     "for i in range(nr_PCs):\n",
@@ -313,13 +294,19 @@
     "    for label in PCs_labels:\n",
     "        PCs.rename(columns={f\"{label}\": f\"{label}_dim_{dim}\"}, inplace=True)\n",
     "        dims_df[f\"{label}_{dim}\"] = list(PCs[f\"{label}_dim_{dim}\"])\n",
-    "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +509,7 @@
        "[2504 rows x 9 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -578,10 +565,10 @@
     "input_layer = Input(shape=(input_dim,))\n",
     "\n",
     "# Encoder\n",
-    "bottleneck = Dense(encoding_dim, activation='linear', name='bottleneck')(input_layer)\n",
+    "bottleneck = Dense(encoding_dim, activation='elu', name='bottleneck')(input_layer)\n",
     "\n",
     "# Decoder\n",
-    "output_layer = Dense(input_dim, activation='linear')(bottleneck)\n",
+    "output_layer = Dense(input_dim, activation='elu')(bottleneck)\n",
     "\n",
     "# Build Autoencoder Model\n",
     "autoencoder = Model(inputs=input_layer, outputs=output_layer)\n",
