--- a/run_test.ipynb
+++ b/run_test.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-19 09:02:27.160057: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-03-19 09:02:27.243383: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-03-19 09:02:27.940808: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-03-19 09:02:27.943671: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-03-20 15:51:40.744134: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-03-20 15:51:40.828932: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-03-20 15:51:41.282885: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-03-20 15:51:41.284833: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-03-19 09:02:29.981198: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2025-03-20 15:51:42.325861: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -27,6 +27,7 @@
     "from functools import reduce\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from keras.models import load_model\n",
+    "from sklearn.decomposition import PCA\n",
     "\n",
     "# Configuration settings\n",
     "from chasm.config import CONFIG\n",
@@ -110,25 +111,109 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.listdir(f\"{CONFIG['PATH_data']}/01_raw/\")"
+    "\"\"\"\n",
+    "# From AF_Chunks to PCA representation\n",
+    "\n",
+    "path_chunks = f\"{CONFIG['PATH_data']}/03_macro_similar_AF/\"\n",
+    "path_projected_snps = f\"{CONFIG['PATH_data']}/04_projected/\"\n",
+    "\n",
+    "nr_projected_dims = 3\n",
+    "nr_snps_for_PCA_per_chrom = 200\n",
+    "os.listdir(path_chunks)\n",
+    "chroms = [f for f in os.listdir(path_chunks) if f.startswith(\"chrom\")]\n",
+    "for chrom in chroms:\n",
+    "    path_chrom = f\"{path_chunks}{chrom}/\"\n",
+    "    chunks = [f for f in os.listdir(path_chrom) if f.startswith(\"chunk\")]\n",
+    "    for chunk in chunks:\n",
+    "        #print(chunk)\n",
+    "        path_chunk = f\"{path_chrom}/{chunk}\"\n",
+    "        #chunk = pd.read_pickle(f\"{path_chunk}\")\n",
+    "        \n",
+    "        path_to_do = f\"{path_projected_snps}/to_do/{chrom}/\"\n",
+    "        os.makedirs(path_to_do, exist_ok=True)\n",
+    "        os.system(f\"cp {path_chunk} {path_to_do}\")\n",
+    "    \n",
+    "\n",
+    "path_to_do = f\"{path_projected_snps}/to_do/\"\n",
+    "for i in list(range(nr_projected_dims)):\n",
+    "    path_projected = f\"{path_projected_snps}/projection_{i}/\"\n",
+    "    os.makedirs(path_projected, exist_ok=True)\n",
+    "    genos = []\n",
+    "    for chrom in chroms:\n",
+    "        path_chrom = f\"{path_projected_snps}/to_do/{chrom}/\"\n",
+    "        chunks = os.listdir(path_chrom)\n",
+    "        nr_snps_for_PCA_per_chunks = math.ceil(nr_snps_for_PCA_per_chrom / len(chunks))\n",
+    "        for chunk in chunks:\n",
+    "            path_chunk = f\"{path_chrom}/{chunk}\"\n",
+    "            geno = pd.read_pickle(path_chunk)\n",
+    "            num_available_columns = geno.shape[1]\n",
+    "\n",
+    "            # Adjust n if needed\n",
+    "            n = min(nr_snps_for_PCA_per_chunks, num_available_columns)\n",
+    "            geno = geno.sample(n=n, axis=1)\n",
+    "            genos.append(geno)\n",
+    "    genos = pd.concat(genos, axis=1)\n",
+    "    # Standardize the data (zero mean, unit variance)\n",
+    "    scaler = StandardScaler()\n",
+    "    genos = scaler.fit_transform(genos)  # Returns a NumPy array\n",
+    "\n",
+    "    # Apply PCA\n",
+    "    pca = PCA(n_components=1)\n",
+    "    genos_pca = pca.fit_transform(genos)\n",
+    "\n",
+    "    # Convert PCA output to DataFrame\n",
+    "    genos_pca = pd.DataFrame(genos_pca, columns=[f'PC1'])\n",
+    "    genos_pca.to_pickle(f\"{path_projected}/PC1_projection_{i}.pkl\")\n",
+    "    \n",
+    "    # Select only the SNPs with low P_vals with the PCA and update the to_do folder\n",
+    "    chroms = [f for f in os.listdir(path_to_do) if f.startswith('chrom')]\n",
+    "    for chrom in chroms:\n",
+    "        path_chrom = f\"{path_to_do}/{chrom}\"\n",
+    "        path_projected_chrom = f\"{path_projected}/{chrom}/\"\n",
+    "        os.makedirs(path_projected_chrom, exist_ok=True)\n",
+    "        #path_output_chrom = f\"{path_output_dim}/{chrom}\"\n",
+    "        #os.makedirs(path_output_chrom, exist_ok=True)\n",
+    "        chunks = os.listdir(path_chrom)\n",
+    "        for chunk in chunks:\n",
+    "            path_chunk = f\"{path_chrom}/{chunk}\"\n",
+    "            path_chunk_raw = f\"{path_chunks}/{chrom}/{chunk}\"\n",
+    "            #path_output_chunk = f\"{path_output_chrom}/{chunk}\"\n",
+    "            \n",
+    "            geno_raw = pd.read_pickle(path_chunk_raw)\n",
+    "            nr_snps_raw = geno_raw.shape[1]\n",
+    "            to_take = math.ceil(nr_snps_raw/nr_projected_dims)\n",
+    "            geno = pd.read_pickle(path_chunk)\n",
+    "            \n",
+    "            \n",
+    "            p_vals = []\n",
+    "            betas = []\n",
+    "            snps = []\n",
+    "            \n",
+    "            for snp in geno.columns:\n",
+    "                y = genos_pca[['PC1']].reset_index(drop=True)\n",
+    "                X1 = geno[[snp]].reset_index(drop=True)\n",
+    "                [beta_values, p_values] = ols_regression(y['PC1'], X1[snp], covs=None)\n",
+    "                p_vals.append(p_values[snp])\n",
+    "                betas.append(beta_values[snp])\n",
+    "                snps.append(snp)\n",
+    "                \n",
+    "            p_vals = pd.DataFrame(data = {'pval': p_vals, 'betas':betas, 'snp_rs':snps})\n",
+    "            p_vals['-logp'] = -np.log10(p_vals['pval'].replace(0, 1e-300))\n",
+    "            \n",
+    "            # Assuming `p_vals` is a pandas DataFrame\n",
+    "            to_keep = p_vals.sort_values(by='-logp', ascending=False).head(to_take)\n",
+    "            to_do = p_vals.loc[~p_vals.index.isin(to_keep.index)]\n",
+    "            geno[to_keep['snp_rs']].to_pickle(f\"{path_projected_chrom}/{chunk}\")\n",
+    "            geno[to_do['snp_rs']].to_pickle(f\"{path_to_do}/{chrom}/{chunk}\")\n",
+    "os.system(f\"rm -rf {path_to_do}\")\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\npath_chunks = f\"{CONFIG[\\'PATH_data\\']}/03_macro_similar_AF/\"\\npath_output = f\"{CONFIG[\\'PATH_data\\']}/04_ld_blocks/\"\\nn_components = 10\\nsize_block = 1000\\nos.listdir(path_chunks)\\nchroms = [f for f in os.listdir(path_chunks) if f.startswith(\"chrom\")]\\nfor chrom in chroms:\\n    path_chrom = f\"{path_chunks}{chrom}/\"\\n    path_output_chrom = f\"{path_output}{chrom}/\"\\n    os.makedirs(path_output_chrom, exist_ok=True)\\n    chunks = [f for f in os.listdir(path_chrom) if f.startswith(\"chunk\")]\\n    for chunk in chunks:\\n        name_chunk = chunk.split(\".pkl\")[0]\\n        divide_into_lds(path_chrom, path_output_chrom, name_chunk, n_components, size_block)\\n'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "path_chunks = f\"{CONFIG['PATH_data']}/03_macro_similar_AF/\"\n",
@@ -145,7 +230,7 @@
     "    for chunk in chunks:\n",
     "        name_chunk = chunk.split(\".pkl\")[0]\n",
     "        divide_into_lds(path_chrom, path_output_chrom, name_chunk, n_components, size_block)\n",
-    "\"\"\"\n"
+    "\"\"\""
    ]
   },
   {
